--- a/networks.Rmd
+++ b/networks.Rmd
@@ -13,15 +13,18 @@ knitr::opts_chunk$set(echo = FALSE,message = F,warning = F)
 
 ```{r includes}
 if (!require("pacman")) install.packages("pacman")
+# igraph es la libreria de grafos, threejs tiene herramientas para graficar objetos en js y htmlwidgets lo uso para exportar una pagina html a un archivo
 pacman::p_load("dplyr","igraph","threejs","tidyr","htmlwidgets")
 ```
 
 ```{r}
+# Renombrar las columnas para igraph
 distancias_periodos_todos <- distancias_periodos_todos %>% 
   rename(Source=desde,Target=hacia,weight=idps_dist,period=periodo)
 ```
 
 ```{r}
+# Generar el listado de legisladores y sus atributos (el del script anterior falla por algun motivo)
 legisladores <- distancias_periodos_todos %>% gather(variable,legislador,-c(weight,period)) %>%
   distinct(legislador) %>% 
   inner_join(legislador_bloque_periodo)
@@ -29,24 +32,31 @@ legisladores <- distancias_periodos_todos %>% gather(variable,legislador,-c(weig
 
 
 ```{r}
+# Generar un objeto grafo por cada periodo, con atributos que luego usamos
 grafos_por_periodo <- pblapply(periodos,function(x){
   # Extraer las distancias para un periodo determinado
   distancias_periodo <- distancias_periodos_todos[distancias_periodos_todos$period == x,]
+  # Extraer los legisladores para el mismo periodo
   diputades_periodo <- legisladores[legisladores$periodo == x,]
+  # Despues de probar puntos de corte para borrar edges
   punto_corte <- 0.7
+  # Genero el grafo desde el dataframe
   g <- graph_from_data_frame(vertices = diputades_periodo$legislador,
                              d = distancias_periodo[,c(1:3)],directed = F)
+  # Agrego atributos a los vertices
   V(g)$legislador_id <- diputades_periodo$legislador_id
   V(g)$bloque <- diputades_periodo$bloque
   V(g)$bloque_id <- diputades_periodo$bloque_id
   V(g)$periodo <- diputades_periodo$periodo
   V(g)$betweenness <- betweenness(g,directed = F,normalized = T)
+  # Aca las etiquetas
   g <- set.vertex.attribute(g,"label",
                                 value = paste0("<b>",V(g)$name,"</b>","<br>",V(g)$bloque))
   
   gsimp <- simplify(g)
-  
+  # Borro los dedges que implican mas distancia que el punto de corte
   gsimp <- delete_edges(g, E(g)[weight > punto_corte])
+  # Simplifico el grafo para evitar duplicados
   gsimp <- simplify(gsimp)
   
 })
@@ -54,6 +64,7 @@ grafos_por_periodo <- pblapply(periodos,function(x){
 
 
 ```{r}
+# Generar las comunidades, visualizaciones del grafo y subgrafos
 lapply(grafos_por_periodo,function(g){
   periodo <- V(g)$periodo[1]
   path <- paste0("grafos_",periodo)
